--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.30.0
-pandas>=1.5.0
-scikit-learn>=1.2.0
-joblib>=1.2.0
-numpy>=1.21.0
+streamlit==1.35.0
+pandas==2.2.2
+scikit-learn==1.4.2
+joblib==1.4.2
+
