--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-pandas
-requests
-scikit-learn
-joblib
-numpy
+streamlit>=1.32.0
+pandas>=2.2.0
+scikit-learn>=1.4.0
+numpy>=1.24.0
+requests>=2.31.0
