--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit>=1.32.0
-pandas>=2.2.0
-scikit-learn>=1.4.0
-numpy>=1.24.0
-requests>=2.31.0
+streamlit==1.18.1
+pandas==1.5.3
+scikit-learn==1.2.0
+numpy==1.23.5
+requests==2.28.1
