--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.12.2
-pandas==1.3.5
-numpy==1.21.5
-scikit-learn==1.0.2
-requests==2.27.1
+streamlit
+pandas
+scikit-learn
+requests
+pickle-mixin
